[package]
name = "codewars-clans"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }