[package]
name = "codewars-clans"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
panic = "abort"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.14.11"
hyper-tls = "0.5.0"
serde_json = "1.0.66"
